--- a/LAB_02_10_Migliorini/css/motivi_per_prendere_un_cane.css
+++ b/LAB_02_10_Migliorini/css/motivi_per_prendere_un_cane.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
 }
 
-#titolo {
+#title {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 50px;
     text-align: left;
@@ -13,19 +13,19 @@ html {
     padding: 20px;
 }
 
-#titolo span {
+#title span {
     position: relative;
     top: 0px;
     left: 200px;
 }
 
-#titolo div {
+#title div {
     position: relative;
     top: 0px; 
     left: 0px;
 }
 
-#bottone_vantaggi {
+#button-benefits {
     font-size: 20px;
     text-align: center;
     color: black;
@@ -38,12 +38,12 @@ html {
     transition: background-color 0.3s, color 0.3s;
 }
 
-#bottone_vantaggi:hover {
+#button-benefits:hover {
     background-color: black;
     color: white;
 }
 
-#bottone_razze {
+#button-breeds {
     font-size: 20px;
     text-align: center;
     color: black;
@@ -56,7 +56,7 @@ html {
     transition: background-color 0.3s, color 0.3s;
 }
 
-#bottone_razze:hover {
+#button-breeds:hover {
     background-color: black;
     color: white;
 }
@@ -67,12 +67,20 @@ a {
     color: black;
 }
 
-#header-immagini-cagnolini {
+body {
+    background-color:black;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#titolo-fondo-pagina {
     font-size: 40px;
     text-align: center;
     color: yellow;
     margin-right: 550px;
 }
+
 
 #paragrafo-titolo{
     font-size: 30px;
@@ -81,32 +89,8 @@ a {
     margin-top: -20px;
 }
 
-body {
-    background-color:black;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
 
-#cagnolino-1 {
-    width: 45%;
-    height: auto;
-    margin-left: 40px;
-}
-#cagnolino-2 {
-    width: 47%;
-    height: 576px;
-    margin-left: 55px;
-    margin-right: 40px;
-}
-
-
-
-/* Pagina Motivazioni */
-
-
-
-#titolo-pagina-motivazioni {
+#page-title-reasons {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 50px;
     text-align: center;
@@ -145,12 +129,12 @@ ul li::before {
     left: -20px;
 }
 
-#link-argomento {
+#link-topic {
     text-decoration: none;
     color: inherit; /* Use the parent color */
 }
 
-.titolo-paragrafi {
+.paragraph-title {
     color: rgb(7, 181, 239);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
@@ -158,14 +142,9 @@ ul li::before {
     margin-bottom: 100px;
 }
 
-#nome-paragrafo {
+#paragraph-name {
     color: rgb(134, 35, 35);
     font-size: 30px;
-}
-
-#paragrafi-spiegazione {
-    color: white;
-    font-size: 20px;
 }
 
 /* General styles */
@@ -175,16 +154,24 @@ ul li::before {
     display: inline-block;
 }
 
-.text-white {
+/* Specific styles */
+#paragraph-explanation {
+    margin-left: 50px;
+    margin-bottom: 100px;
     color: white;
     font-size: 20px;
 }
 
-/* Specific styles */
-#spiegazione-paragrafo {
-    margin-left: 50px;
-    margin-bottom: 100px;
+#footer-title {
+    font-size: 40px;
+    text-align: center;
+    color: yellow;
+    margin-right: 550px;
 }
 
-
-/* Pagina Razze */
+#footer-paragraph {
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    margin-top: -20px;
+}
